<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.farruxx.yandextranslator.view.StartActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:layout_editor_absoluteY="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <include layout="@layout/main_toolbar" />
    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/input_ev"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="top|center_vertical"
        android:hint="@string/origin_placeholder"
        android:inputType="textMultiLine"
        android:paddingRight="@dimen/clear_button_width"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:background="@drawable/input" />

    <ImageButton
        android:id="@+id/clear_button"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_close"
        app:layout_constraintRight_toRightOf="@+id/input_ev"
        app:layout_constraintTop_toTopOf="@+id/input_ev"
        android:layout_width="58dp"
        android:layout_marginTop="8dp" />


    <TextView
        android:text="@string/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/copyright"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:textColor="@color/colorPrimary"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@drawable/bookmark_selector"
        android:id="@+id/favorite"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@+id/input_ev"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        android:padding="0dp" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_ev"
        app:layout_constraintBottom_toTopOf="@+id/copyright"
        app:layout_constraintRight_toLeftOf="@+id/favorite"
        android:layout_width="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        >

        <TextView
            android:id="@+id/output_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="32dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-light"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            tools:text="translated text" />
    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>